cmake_minimum_required(VERSION 3.10)
project(cpp)

set(CMAKE_CXX_STANDARD 11)
set( STRING_DISTANCE_EXECUTABLE_NAME SD )
set(heap heap)
set (HUFFMAN huffman)
set(23BIRTHDAY 23birthday)
set(my_queue queue)
set(my_sort sort)
set(my_map map)

add_subdirectory( edit_distance )
add_subdirectory(heap)
add_subdirectory(huffman)
add_subdirectory(23birthday)
add_subdirectory(queue)
add_subdirectory(sort)
add_subdirectory(map)
